<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_gradient"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_screen_padding" >

        <TextView
            android:id="@+id/textViewAboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAboutTitle"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/textViewAboutDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ABOUT_DETAILS"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/textViewAboutMoreDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ABOUT_MOREDETAILS"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/textViewLinkGithub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ABOUT_GITHUB"
            android:textColor="@color/dark_grey" />
    </LinearLayout>

</LinearLayout>